# sigmapy

./: .env.example  .gitignore  CLAUDE.md  INSTALLATION.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
examples/: DECIMAL_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  beginner_friendly_demo.py  cli_nft_collections.py  cli_token_distribution.py  example_collection.yaml  example_nft_collection.yaml  generated_template.yaml  run_advanced_transaction.py  secure_setup_demo.py  test_collection_creation.yaml  test_decimal_distribution.yaml  test_installation.py  test_large_distribution.yaml  test_nft_collection_minting.yaml  test_token_distribution.py  test_valid_collection.yaml  test_valid_nft_collection.yaml
examples/configs/: nft_collection.yaml  token_distribution.yaml
src/sigmapy/: __init__.py
src/sigmapy/client/: __init__.py  ergo_client.py  network_manager.py  wallet_manager.py
src/sigmapy/config/: __init__.py  config_parser.py  templates.py  validators.py
src/sigmapy/examples/: __init__.py  advanced_transaction.py  simple_payment.py
src/sigmapy/operations/: __init__.py  batch_processor.py  collection_manager.py  contract_manager.py  nft_minter.py  royalty_manager.py  token_manager.py
src/sigmapy/tutorials/: __init__.py  basic_wallet.py
src/sigmapy/utils/: __init__.py  address_utils.py  amount_utils.py  env_utils.py  network_utils.py  serialization_utils.py  transaction_utils.py
